// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Input should render correctly 1`] = `
<styled.div
  disabled={false}
  error={false}
  hideLabel={false}
  success={false}
>
  <label
    htmlFor="1"
  >
    <span
      className="input__labelText"
    >
      Input Label
    </span>
  </label>
  <div
    className="input__wrapper"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete="off"
      disabled={false}
      id="1"
      name="1"
      onChange={null}
      pattern={null}
      placeholder=""
      type="text"
      value=""
    />
  </div>
</styled.div>
`;

exports[`Input Input with default value should render correctly 1`] = `
<styled.div
  disabled={false}
  error={false}
  hideLabel={true}
  success={false}
>
  <label
    htmlFor="1"
  >
    <span
      className="input__labelText"
    >
      Input Label
    </span>
  </label>
  <div
    className="input__wrapper"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete="off"
      disabled={false}
      id="1"
      name="1"
      onChange={null}
      pattern={null}
      placeholder=""
      type="text"
      value="true"
    />
  </div>
</styled.div>
`;

exports[`Input Input with hidden label should render correctly 1`] = `
<styled.div
  disabled={false}
  error={false}
  hideLabel={true}
  success={false}
>
  <label
    htmlFor="1"
  >
    <span
      className="input__labelText"
    >
      Input Label
    </span>
  </label>
  <div
    className="input__wrapper"
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoComplete="off"
      disabled={false}
      id="1"
      name="1"
      onChange={null}
      pattern={null}
      placeholder=""
      type="text"
      value=""
    />
  </div>
</styled.div>
`;
